view profile template is done, change password bind to routes done, added alert fade-out timer to main.js

--- a/seMgmtApp/templates/base.html
+++ b/seMgmtApp/templates/base.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css')}}" type="text/css">
-    <title>Document</title>
+    <title>{% block title %}{% endblock %}Swift Estate Property Management</title>
 </head>
 
 <body> 
