--- a/seMgmtApp/templates/my_ads.html
+++ b/seMgmtApp/templates/my_ads.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-
+{% block title %}{{ session['username'].capitalize() }}'s Ads | {% endblock %}
 {% block content %}
 
 
