finished profile page with all routes, delete user, change photo link, and change password

--- a/seMgmtApp/templates/index.html
+++ b/seMgmtApp/templates/index.html
@@ -3,12 +3,25 @@
 {% block content %}
 
 <div class="container-fluid p-0">
+    <!-- FLASH MESSAGES -->
+    {% with messages = get_flashed_messages() %}
+    {% if messages %}
+    <div class="alert alert-success d-flex justify-content-center">
+        {% for message in messages %}
+        <span>{{ message }}</span>
+        {% endfor %}
+    </div>
+    {% endif %}
+    {% endwith %}
+
+    <!-- Banner -->
+
     <div class="col-12 col-md-11 col-lg-10 col-xl-8 banner"></div>
 
     <!-- Carousel -->
     <div class="container col-12 col-md-11 col-lg-10 col-xl-8 p-0">
         <div class="carousel-main">
-        <!-- Carousel To buy -->
+            <!-- Carousel To buy -->
             <div class="container col-12 col-md-6 carousel-buy">
                 <div class="row title-buy">LATEST FOR SALE</div>
                 <div class="carousel slide" id="main-carousel" data-ride="carousel">
