added cancel button to add property and edit pages, after update redirect to the property details again, fixed carousel controls that wasn't working, set 4 indicator scrolls to carousels, navbar after login is now opened to better visualization, delete button now ask for a confirmation before delete the property

--- a/seMgmtApp/templates/index.html
+++ b/seMgmtApp/templates/index.html
@@ -24,14 +24,13 @@
             <!-- Carousel To buy -->
             <div class="container col-12 col-md-6 carousel-buy">
                 <div class="row title-buy">LATEST FOR SALE</div>
-                <div class="carousel slide" id="main-carousel" data-ride="carousel">
+                <div class="carousel slide" id="main-carousel-buy" data-ride="carousel">
                     <ol class="carousel-indicators">
-                        <li data-target="#main-carousel" data-slide-to="0" class="active"></li>
-                        <li data-target="#main-carousel" data-slide-to="1"></li>
-                        <li data-target="#main-carousel" data-slide-to="2"></li>
-                        <li data-target="#main-carousel" data-slide-to="3"></li>
-                        <li data-target="#main-carousel" data-slide-to="4"></li>
-                        <li data-target="#main-carousel" data-slide-to="5"></li>
+                        <li data-target="#main-carousel-buy" data-slide-to="0" class="active"></li>
+                        <li data-target="#main-carousel-buy" data-slide-to="1"></li>
+                        <li data-target="#main-carousel-buy" data-slide-to="2"></li>
+                        <li data-target="#main-carousel-buy" data-slide-to="3"></li>
+
                     </ol><!-- /.carousel-indicators -->
 
                     <div class="carousel-inner">
@@ -46,11 +45,11 @@
                         {% endfor %}
                     </div><!-- /.carousel-inner -->
 
-                    <a href="#main-carousel" class="carousel-control-prev" data-slide="prev">
+                    <a href="#main-carousel-buy" class="carousel-control-prev" data-slide="prev">
                         <span class="carousel-control-prev-icon"></span>
                         <span class="sr-only" aria-hidden="true">Prev</span>
                     </a>
-                    <a href="#main-carousel" class="carousel-control-next" data-slide="next">
+                    <a href="#main-carousel-buy" class="carousel-control-next" data-slide="next">
                         <span class="carousel-control-next-icon"></span>
                         <span class="sr-only" aria-hidden="true">Next</span>
                     </a>
@@ -61,13 +60,12 @@
             <!-- Carousel To rent -->
             <div class="container col-12 col-md-6 carousel-rent">
                 <div class="row title-rent">LATEST FOR RENT</div>
-                <div class="carousel slide" id="main-carousel" data-ride="carousel">
+                <div class="carousel slide" id="main-carousel-rent" data-ride="carousel">
                     <ol class="carousel-indicators">
-                        <li data-target="#main-carousel" data-slide-to="0" class="active"></li>
-                        <li data-target="#main-carousel" data-slide-to="1"></li>
-                        <li data-target="#main-carousel" data-slide-to="2"></li>
-                        <li data-target="#main-carousel" data-slide-to="4"></li>
-                        <li data-target="#main-carousel" data-slide-to="5"></li>
+                        <li data-target="#main-carousel-rent" data-slide-to="0" class="active"></li>
+                        <li data-target="#main-carousel-rent" data-slide-to="1"></li>
+                        <li data-target="#main-carousel-rent" data-slide-to="2"></li>
+                        <li data-target="#main-carousel-rent" data-slide-to="3"></li>
                     </ol><!-- /.carousel-indicators -->
 
                     <div class="carousel-inner">
@@ -82,11 +80,11 @@
                         {% endfor %}
                     </div><!-- /.carousel-inner -->
 
-                    <a href="#main-carousel" class="carousel-control-prev" data-slide="prev">
+                    <a href="#main-carousel-rent" class="carousel-control-prev" data-slide="prev">
                         <span class="carousel-control-prev-icon"></span>
                         <span class="sr-only" aria-hidden="true">Prev</span>
                     </a>
-                    <a href="#main-carousel" class="carousel-control-next" data-slide="next">
+                    <a href="#main-carousel-rent" class="carousel-control-next" data-slide="next">
                         <span class="carousel-control-next-icon"></span>
                         <span class="sr-only" aria-hidden="true">Next</span>
                     </a>
