--- a/seMgmtApp/static/css/style.css
+++ b/seMgmtApp/static/css/style.css
@@ -46,7 +46,6 @@ ul {
     width: 100%;
     height: 250px;
     border: 1px solid rgba(128, 128, 128, 0.308);
-    border-radius: 10px 10px 0 0;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
     margin: 0 auto;
     padding: 0;
@@ -60,7 +59,6 @@ ul {
     background-color: #FFF;
     border: 1px solid rgba(128, 128, 128, 0.308);
     border-bottom: 0;
-    border-radius: 10px 10px 0 0;
     color: rgb(0, 0, 0);
     font-weight: 500;
     font-size: 18px;
@@ -424,7 +422,7 @@ ul {
     display: flex;
     justify-content: center;
     margin: 15px 0 0 0;
-    padding: 25px 0 10px 0 ;
+    padding: 25px 0 10px 0;
     font-size: 25px;
     font-weight: bold;
 }
@@ -441,6 +439,7 @@ ul {
 .agent-options-box {
     margin: 20px 0
 }
+
 /* Pagination */
 
 .page-item.active .page-link {
@@ -495,12 +494,21 @@ ul {
     }
 
     .property-image-box {
-        padding-right: 0;
+        padding: 0 0 0 20px;
     }
 
     .summary-list,
     .property-description {
         padding: 0;
+    }
+
+    .banner {
+        border-radius: 10px 10px 0 0;
+    }
+
+    .title-buy,
+    .title-rent {
+        border-radius: 10px 10px 0 0;
     }
 
     .carousel-main {
