--- a/seMgmtApp/templates/add_property.html
+++ b/seMgmtApp/templates/add_property.html
@@ -50,11 +50,12 @@
             </div>
             <!-- Address -->
             <div class="form-group">
-                <input type="text" class="form-control" id="address" name="address" style="text-transform: capitalize;" placeholder="Address" required>
+                <input type="text" class="form-control" id="address" name="address" style="text-transform: capitalize;"
+                    placeholder="Address" required>
             </div>
             <div class="form-group">
-                <input type="text" class="form-control" id="address2" name="address2" style="text-transform: capitalize;"
-                    placeholder="Apartment, studio or floor number">
+                <input type="text" class="form-control" id="address2" name="address2"
+                    style="text-transform: capitalize;" placeholder="Apartment, studio or floor number">
             </div>
             <!-- District -->
             <div class="input-group mb-3">
@@ -77,8 +78,8 @@
             </div>
             <!-- Description -->
             <div class="form-group">
-                <textarea class="form-control" rows="7" id="description" name="description"
-                    placeholder="Description" required></textarea>
+                <textarea class="form-control" rows="7" id="description" name="description" placeholder="Description"
+                    required></textarea>
             </div>
             <!-- Image -->
             <div class="form-group">
@@ -102,7 +103,10 @@
             </div>
             <!-- Add Property button -->
             <div class="add-property-button">
-                <button type="submit" class="btn btn-dark ml-auto mb-3">Add Property</button>
+                <button type="submit" class="btn btn-dark btn-block mb-3 mx-2">Add</button>
+                <!-- Cancel Button -->
+                <a class="btn btn-dark btn-block mb-3 mx-2"
+                    href={{ url_for( 'properties.my_ads') }}>Cancel</a>
             </div>
         </form>
     </div>
