--- a/seMgmtApp/templates/properties_list.html
+++ b/seMgmtApp/templates/properties_list.html
@@ -8,10 +8,10 @@
         <div class="row">
             <div class="input-group my-4">
                 <select class="custom-select col-md-4 ml-auto " id="sort_by" name="sort_by" aria-label="Sort By">
-                    <option value="" disabled selected>Sort By </option>
-                    <option value="all_properties">All</option>
-                    <option value="for_sale">For Sale</option>
-                    <option value="for_rent">For Rent</option>
+                    <option value="" disabled selected>{% if not search %}Select{% else %}{{select}}{% endif %}</option>
+                    <option value="all_properties">All properties</option>
+                    <option value="for_sale">For sale</option>
+                    <option value="for_rent">For rent</option>
                 </select>
             </div>
             <div class="row col-12 mx-auto px-0 px-md-auto">
@@ -31,7 +31,7 @@
                         <!--Previous Page-->
                         {% if current_page | int > 1 %}
                         <li class="page-item">
-                            <a class="page-link text-secondary" href="{{ url_for('properties.list_properties', current_page=current_page-1) }}">
+                            <a class="page-link text-secondary" href="{{ url_for('properties.list_properties', search=search, current_page=current_page-1) }}">
                                 <i class="fas fa-arrow-left" aria-hidden="true"></i>
                                 <span class="sr-only">Prev</span>
                             </a>
@@ -49,7 +49,7 @@
                         {% else %}
                         <li class="page-item">
                             <a class="page-link text-secondary"
-                                href="{{ url_for('properties.list_properties', current_page=page_number) }}">{{ page_number }}</a>
+                                href="{{ url_for('properties.list_properties', search=search, current_page=page_number) }}">{{ page_number }}</a>
                         </li>
                         {% endif %}
                         {% endfor %}
@@ -57,7 +57,7 @@
                         <!--Next Page-->
                         {% if current_page | int < pages | count | int %}
                         <li class="page-item">
-                            <a class="page-link text-secondary" href="{{ url_for('properties.list_properties', current_page=current_page+1) }}">
+                            <a class="page-link text-secondary" href="{{ url_for('properties.list_properties', search=search, current_page=current_page+1) }}">
                                 <i class="fas fa-arrow-right" aria-hidden="true"></i>
                                 <span class="sr-only">Prev</span>
                             </a>
