--- a/seMgmtApp/static/css/style.css
+++ b/seMgmtApp/static/css/style.css
@@ -45,7 +45,7 @@ ul {
     background-position: center;
     width: 100%;
     height: 250px;
-    border: 1px solid rgba(128, 128, 128, 0.308);
+    border: 1px solid rgba(0, 0, 0, 0.568);
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
     margin: 0 auto;
     padding: 0;
@@ -57,13 +57,13 @@ ul {
     display: flex;
     justify-content: center;
     background-color: #FFF;
-    border: 1px solid rgba(128, 128, 128, 0.308);
+    border: 1px solid rgba(0, 0, 0, 0.568);
     border-bottom: 0;
     color: rgb(0, 0, 0);
     font-weight: 500;
-    font-size: 18px;
+    font-size: 16px;
     margin: 0;
-    padding: 10px 0;
+    padding: 5px 0;
 }
 
 
@@ -72,7 +72,6 @@ ul {
 .carousel-inner,
 .carousel-item,
 .carousel-inner .carousel-item .img {
-    border: 1px solid rgba(128, 128, 128, 0.308);
     border-top: 0;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
     height: 30vh;
@@ -480,7 +479,7 @@ ul {
 
 
 @media (min-width: 768px) {
-    
+
     .navbar-logo {
         padding: 5rem 5rem 0 5rem;
     }
@@ -516,6 +515,11 @@ ul {
         display: flex;
     }
 
+    .carousel {
+        border: 1px solid rgba(0, 0, 0, 0.568);
+        border-top: 0
+    }
+
     .carousel-inner,
     .carousel-item,
     .carousel-inner .carousel-item .img {
@@ -549,6 +553,11 @@ ul {
         height: 330px;
     }
 
+    .title-buy,
+    .title-rent {
+        font-size: 18px;
+        padding: 8px 0;
+    }
 }
 
 @media (min-width: 1200px) {
