added no-results partial page for my_ads and properties_list

--- a/seMgmtApp/templates/my_ads.html
+++ b/seMgmtApp/templates/my_ads.html
@@ -28,6 +28,8 @@
             <div class="row col-12 mx-auto px-0 px-md-auto">
                 {% for property in sort_by_selector %}
                 {% include "partials/cards.html" %}
+                {% else %}
+                {% include "partials/no_results.html" %}    
                 {% endfor %}
             </div>
 
