--- a/seMgmtApp/static/css/style.css
+++ b/seMgmtApp/static/css/style.css
@@ -38,6 +38,7 @@ ul {
     font-size: 18px;
 }
 
+
 .banner {
     background-image: url("../img/banner.jpg");
     background-size: cover;
@@ -445,6 +446,18 @@ ul {
     color: #fff;
     background-color: rgb(56, 56, 56);
     border-color: grey
+}
+
+/* No results */
+
+.no-result-box {
+    background-color: #FFF;
+    border-radius: 15px;
+    -webkit-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+    box-shadow: 0 8px 15px rgba(0, 0, 0, 0.16), 0 8px 15px rgba(0, 0, 0, 0.23);
+    width: 100%;
+    height: 40vh;
+    margin: 1rem auto 0 auto;
 }
 
 
