--- a/seMgmtApp/templates/partials/no_results.html
+++ b/seMgmtApp/templates/partials/no_results.html
@@ -1,7 +1,7 @@
 <div class="container col-11 col-md-9 no-result-box">
     <div class="no-result-text">You haven't added any properties to your list of ads yet.</div>
     <div class="row col-8 col-md-6 col-xl-4 no-result-image-box">
-        <img src="{{ url_for('static', filename='img/agent-no-photo.jpg') }}" class="img-fluid no-result-img"
+        <img src="{{ url_for('static', filename='img/no-result.jpg') }}" class="img-fluid no-result-img"
             alt="Property Image" lazyload="on">
     </div>
     <div class="container">
