--- a/seMgmtApp/static/css/style.css
+++ b/seMgmtApp/static/css/style.css
@@ -100,7 +100,7 @@ ul {
 }
 
 .navbar-color {
-    background-color: #ffffff;
+    background-color: #fff;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
@@ -130,7 +130,7 @@ ul {
 }
 
 .footer-main {
-    background-color: #ffffff;
+    background-color: #fff;
     box-shadow: 0 -4px 4px -4px black;
     padding: 0.1rem 0 0 0;
     margin-top: 1rem;
@@ -174,7 +174,7 @@ ul {
     display: flex;
     flex-direction: column;
     margin: 1rem auto auto auto;
-    background-color: #fffffff7;
+    background-color: #fff;
     border: 1px solid rgba(0, 0, 0, 0.568);
     border-radius: 10px;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
@@ -342,7 +342,7 @@ ul {
     border: 1px solid rgba(0, 0, 0, 0.568);
     -webkit-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
     box-shadow: 0 8px 15px rgba(0, 0, 0, 0.16), 0 8px 15px rgba(0, 0, 0, 0.23);
-    background-color: #fffffff7
+    background-color: #fff;
 }
 
 .details-top-box {
@@ -413,7 +413,7 @@ ul {
     border-radius: 15px;
     -webkit-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
     box-shadow: 0 8px 15px rgba(0, 0, 0, 0.16), 0 8px 15px rgba(0, 0, 0, 0.23);
-    background-color: #fffffff7
+    background-color: #fff
 }
 
 .title-profile-box {
@@ -572,7 +572,7 @@ ul {
     }
 
     .banner {
-        border-radius: 10px 10px 0 0;
+        border-radius: 10px;
     }
 
     .title-buy,
