README.md added and working in it, added alert confirmation after login, footer page fixed

--- a/seMgmtApp/templates/partials/footer.html
+++ b/seMgmtApp/templates/partials/footer.html
@@ -1,10 +1,9 @@
 <!-- Footer -->
-<footer class="footer-main">
+<div class="footer-main">
 
-    <!-- Footer Elements -->
     <div class="container">
   
-      <!-- Social buttons -->
+      <!-- Social media buttons -->
       <ul class="list-unstyled list-inline text-center social-buttons">
         <li class="list-inline-item">
           <a class="btn-floating btn-fb mx-1">
@@ -22,13 +21,12 @@
           </a>
         </li>
       </ul>
-      <!-- Social buttons -->
+
   
     </div>
 
     <!-- Copyright -->
     <div class="footer-copyright text-center">© 2020 Copyright: Rodrigo Neumann
-    <!-- Copyright -->
+
   
-  </footer>
-  <!-- Footer -->
+  </div>
