footer page w3 validator issues fixed

--- a/seMgmtApp/templates/partials/footer.html
+++ b/seMgmtApp/templates/partials/footer.html
@@ -1,32 +1,30 @@
 <!-- Footer -->
 <div class="footer-main">
 
-    <div class="container">
-  
-      <!-- Social media buttons -->
-      <ul class="list-unstyled list-inline text-center social-buttons">
-        <li class="list-inline-item">
-          <a class="btn-floating btn-fb mx-1">
-            <i class="fab fa-facebook-f"> </i>
-          </a>
-        </li>
-        <li class="list-inline-item">
-          <a class="btn-floating btn-tw mx-1">
-            <i class="fab fa-twitter"> </i>
-          </a>
-        </li>
-        <li class="list-inline-item">
-          <a class="btn-floating btn-li mx-1">
-            <i class="fab fa-linkedin-in"> </i>
-          </a>
-        </li>
-      </ul>
+  <div class="container">
 
-  
-    </div>
+    <!-- Social media buttons -->
+    <ul class="list-unstyled list-inline text-center social-buttons">
+      <li class="list-inline-item">
+        <a class="btn-floating btn-fb mx-1">
+          <i class="fab fa-facebook-f"> </i>
+        </a>
+      </li>
+      <li class="list-inline-item">
+        <a class="btn-floating btn-tw mx-1">
+          <i class="fab fa-twitter"> </i>
+        </a>
+      </li>
+      <li class="list-inline-item">
+        <a class="btn-floating btn-li mx-1">
+          <i class="fab fa-linkedin-in"> </i>
+        </a>
+      </li>
+    </ul>
 
-    <!-- Copyright -->
-    <div class="footer-copyright text-center">© 2020 Copyright: Rodrigo Neumann
 
-  
   </div>
+
+  <!-- Copyright -->
+  <div class="footer-copyright text-center">© 2020 Copyright: Rodrigo Neumann</div>
+</div>
