--- a/seMgmtApp/templates/properties_list.html
+++ b/seMgmtApp/templates/properties_list.html
@@ -25,15 +25,16 @@
         </div>
         <div class="row mt-4 mb-3">
             <div class="col-sm-12">
-                
+
                 <!--Pagination-->
                 <nav>
                     <ul class="pagination pagination-sm justify-content-center">
-                        
+
                         <!--Previous Page-->
                         {% if current_page | int > 1 %}
                         <li class="page-item">
-                            <a class="page-link text-secondary" href="{{ url_for('properties.list_properties', search=search, current_page=current_page-1) }}">
+                            <a class="page-link text-secondary"
+                                href="{{ url_for('properties.list_properties', search=search, current_page=current_page-1) }}">
                                 <i class="fas fa-arrow-left" aria-hidden="true"></i>
                                 <span class="sr-only">Prev</span>
                             </a>
@@ -55,11 +56,12 @@
                         </li>
                         {% endif %}
                         {% endfor %}
-                        
+
                         <!--Next Page-->
                         {% if current_page | int < pages | count | int %}
                         <li class="page-item">
-                            <a class="page-link text-secondary" href="{{ url_for('properties.list_properties', search=search, current_page=current_page+1) }}">
+                            <a class="page-link text-secondary"
+                                href="{{ url_for('properties.list_properties', search=search, current_page=current_page+1) }}">
                                 <i class="fas fa-arrow-right" aria-hidden="true"></i>
                                 <span class="sr-only">Prev</span>
                             </a>
@@ -71,6 +73,7 @@
                 </nav>
             </div>
         </div>
+    </div>
 </section>
 
 {% endblock %}
